Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -144,25 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Italy'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#italy # 'Italy'\n",
-    "countries[9] = "
+    "countries[9] = \"italy\""
    ]
   },
   {
