--- a/index.ipynb
+++ b/index.ipynb
@@ -191,7 +191,9 @@
    "outputs": [],
    "source": [
     "mexico = None\n",
-    "mexico"
+    "mexico\n",
+    "\n",
+    "countries[4]"
    ]
   },
   {
