--- a/index.ipynb
+++ b/index.ipynb
@@ -186,14 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "mexico = None\n",
     "mexico\n",
     "\n",
-    "countries[4]"
+    "countries[4] = mexico\n"
    ]
   },
   {
